samples/_failures_safe/1761609702_257236_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_462485d2.c: In function ‘main’:
./samples/SAFE/__tmp_462485d2.c:157:17: error: expected declaration or statement at end of input
  157 |                 }
      |                 ^
./samples/SAFE/__tmp_462485d2.c:157:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_462485d2.c:157:17: error: expected declaration or statement at end of input
